<resources>
    <string name="Additional_optional">Additional Details (Optional)</string>
    <string name="Can_you_make_it_for_9000_onwords">Can you make it for 9000 onwords?</string>
    <string name="Email">Email</string>
    <string name="Email_id">Email id</string>
    <string name="Forget_password">Forgot Password</string>
    <string name="New_password">New Password</string>
    <string name="Or">OR</string>
    <string name="Password">Password</string>
    <string name="Reset_pass">Reset Password</string>
    <string name="Retype_password">Retype Password</string>
    <string name="Skip">Skip</string>
    <string name="ViewMore">View more</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="add_auction">Add Auction</string>
    <string name="add_description">Add Description(Max 30 Characters)</string>
    <string name="add_photo">You can add upto 5 photos</string>
    <string name="addauctionprice">Price *</string>
    <string name="addbid">Add bid</string>
    <string name="additional_details">Additional Details</string>
    <string name="address">Address</string>
    <string name="adtitle">Ad title *</string>
    <string name="adveritsements">Adveritsements</string>
    <string name="advertisements">Advertisements</string>
    <string name="advertisename">Sonata wall watch</string>
    <string name="album_view">Select photo album</string>
    <string name="all">All</string>
    <string name="allcat">All Categories</string>
    <string name="app_name">Subasta</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aucproductname">HP NoteBook</string>
    <string name="auction">Auctions</string>
    <string name="auction_posted">Auction posted at</string>
    <string name="auctions">Auctions</string>
    <string name="bid">Place Bid</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand_name">Brand Name *</string>
    <string name="bs_more">More</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="buying">Buying</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="category_prompt">Choose a country</string>
    <string name="category_sub">Choose a Sub Category</string>
    <string name="category_sub_brand">Choose a Sub Brands</string>
    <string name="category_sub_model">Choose a Sub Brands</string>
    <string name="catogory_name">4 days ago</string>
    <string name="changpass">Change Password</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">Chat</string>
    <string name="circle">CIRCLE</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="closeMsg">Are your sure you want to close Subasta?</string>
    <string name="color">Color</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="comment">write your comment here....</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="condition">Include condition,features and reason for selling</string>
    <string name="confirm_pwd_required_validation1">Please Re-Enter New Password.</string>
    <string name="confirm_pwd_validation1">"New Password and Confirm Password doesn't match."</string>
    <string name="contact">Contact Details</string>
    <string name="create_an_account">Create an account</string>
    <string name="curentpkghis">Current Package History</string>
    <string name="currentPkg">Current Subscribed Package</string>
    <string name="currentlocation">Bhavarkuya</string>
    <string name="day_ago">4 days ago</string>
    <string name="default_web_client_id">325269831675-hq4g9h2sd0minlchobnv6b8h09md8od7.apps.googleusercontent.com</string>
    <string name="define_emoji">year;owner</string>
    <string name="desc">Describe what you are selling</string>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
    <string name="discover">Discover</string>
    <string name="discovery">Discovery</string>
    <string name="edate">End Date</string>
    <string name="email">Email Id</string>
    <string name="email11">Email</string>
    <string name="enter_new_pass">Please enter new password.</string>
    <string name="enter_pass">Please enter password.</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="female">Female</string>
    <string name="first_select">First photo of your selection will be your cover photo</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="insureddoc">Insured Doc</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="mao">Make An option</string>
    <string name="mention">Description</string>
    <string name="nav_browse">Browse</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_myads">My ads</string>
    <string name="nav_myauction">My Auction</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_subscription_history">Subscription</string>
    <string name="nfo">No of Onner</string>
    <string name="phone">Phone</string>
    <string name="price">₹400</string>
    <string name="profile">Profile</string>
    <string name="s_date">Starting Date</string>
    <string name="somedetails">Post Auction</string>
    <string name="submit">SUBMIT</string>
    <string name="time">4:30</string>
</resources>