<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:tag="layout/activity_details_aution_0" android:background="@color/off_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@id/cardView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" app:cardBackgroundColor="@android:color/widget_edittext_dark" app:cardCornerRadius="0.0dip" app:cardElevation="5.0dip">
        <RelativeLayout android:background="@drawable/card_shap_shadow" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
            <ImageView android:id="@id/ivBack" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_back" android:layout_centerVertical="true" />
            <com.subasta.utils.CustomTextViewBold android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/somedetails" android:layout_centerInParent="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_below="@id/cardView">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/llImages" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
                <ImageView android:layout_gravity="center" android:id="@id/ivAddImages" android:layout_width="120.0dip" android:layout_height="120.0dip" android:src="@drawable/ic_add_image" android:scaleType="centerCrop" />
                <com.subasta.utils.CustomTextViewBold android:textSize="14.0sp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/add_photo" />
                <com.subasta.utils.CustomTextView android:textSize="12.0sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_select" />
            </LinearLayout>
            <com.subasta.utils.CustomTextViewBold android:textSize="14.0sp" android:textColor="@color/blue" android:gravity="center" android:id="@id/addMoreimages" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="Add more images" android:drawableTop="@drawable/ic_addphoto" android:drawablePadding="5.0dip" android:textAlignment="center" />
            <android.support.v7.widget.RecyclerView android:id="@id/rvImage" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout android:id="@id/tvTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:counterEnabled="true" app:counterMaxLength="10">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/etTitle" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Title" android:singleLine="true" android:editable="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@id/tvbrandname" android:layout_width="fill_parent" android:layout_height="wrap_content" app:counterEnabled="true" app:counterMaxLength="10">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/etBrandName" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/brand_name" android:singleLine="true" android:editable="false" />
            </android.support.design.widget.TextInputLayout>
            <com.subasta.utils.CustomTextView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mention" />
            <android.support.design.widget.TextInputLayout android:id="@id/tvdescription" android:layout_width="fill_parent" android:layout_height="wrap_content" app:counterEnabled="true" app:counterMaxLength="30">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/etDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/add_description" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/etAdress" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/address" android:singleLine="true" android:maxLength="30" android:editable="false" android:drawableLeft="@drawable/ic_location_black" android:drawablePadding="10.0dip" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/etPrice" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/addauctionprice" android:singleLine="true" android:maxLength="10" android:drawableLeft="@drawable/ic_rich" android:drawablePadding="10.0dip" android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/et_S_date" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/s_date" android:singleLine="true" android:editable="false" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/et_end_date" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/edate" android:singleLine="true" android:editable="false" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomEditText android:textSize="14.0sp" android:id="@id/et_owner" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/nfo" android:singleLine="true" android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/line1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.subasta.utils.CustomTextView android:textSize="14.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/insureddoc" />
                <RadioGroup android:orientation="horizontal" android:id="@id/rGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <RadioButton android:textSize="14.0sp" android:id="@id/rbYes" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="YES" android:layout_weight="1.0" />
                    <RadioButton android:textSize="14.0sp" android:id="@id/rbNo" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="NO" android:layout_weight="1.0" />
                </RadioGroup>
            </LinearLayout>
            <com.subasta.utils.CustomTextView android:textColor="@color/gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="" android:lines="2" />
            <com.subasta.utils.CustomButton android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/btnpost" android:background="@drawable/button_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="5.0dip" android:text="@string/add_auction" android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/rlSnackbar" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_alignParentBottom="true" />
</RelativeLayout>