<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@id/cardView" android:tag="layout/adapter_my_chat_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="5.0dip" app:cardElevation="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rvChat" android:background="@drawable/ripplecard" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
        <RelativeLayout android:id="@id/relay1" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView android:id="@id/ivPro" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/dummy_img_aut" />
            <com.subasta.utils.CustomTextViewBold android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="5.0dip" android:text="@string/full_name" android:maxLines="1" android:layout_toLeftOf="@id/tvDate" android:layout_toRightOf="@id/ivPro" />
            <com.subasta.utils.CustomTextViewBold android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:id="@id/tvDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time" android:layout_alignParentRight="true" />
            <com.subasta.utils.CustomTextView android:textSize="14.0sp" android:id="@id/tvMsg" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/Can_you_make_it_for_9000_onwords" android:maxLines="1" android:singleLine="true" android:layout_toRightOf="@id/ivPro" android:layout_below="@id/tvTitle" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>